# OBD-summarization

./: Literature Review.md  README.md  dc_to_s3.py  main.py  pyproject.toml  simulate_data.py  sum_from_S3.py  sum_stats.py
data/: simulated_text_data.csv
