[project]
name = "obd-summarization"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "boto3>=1.38.36",
    "boto3-stubs==1.38.36",
    "dotenv>=0.9.9",
    "faker>=37.3.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pandas-stubs==2.3.0.250703",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "tqdm>=4.67.1",
]
